[tool.poetry]
name = "sent_eval"
version = "0.1.0"
description = "directory for a sentiment model"
authors = ["sv-github <svyatver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas-profiling = "^2.10.1"
transformers = "^4.3.2"
torch = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
